.playwright-mcp/console-2026-04-22T10-15-56-427Z.log
[      52ms] [ERROR] Failed to load resource: the server responded with a status of 500 (Internal Server Error) @ http://localhost:3000/:0
[     281ms] [INFO] %cDownload the React DevTools for a better development experience: https://reactjs.org/link/react-devtools font-weight:bold @ webpack-internal:///../../node_modules/react-dom/cjs/react-dom.development.js:29889
[     341ms] Error: Syntax error: D:\CV\apps\wedding-invitation-platform\apps\web\src\app\globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive.

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;

    at getCssError (file://D:\CV\apps\wedding-invitation-platform\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\parseCss.js:24:16)
    at getModuleBuildError (file://D:\CV\apps\wedding-invitation-platform\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\webpackModuleError.js:114:43)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
    at async (file://D:\CV\apps\wedding-invitation-platform\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\index.js:29:49)
    at async (file://D:\CV\apps\wedding-invitation-platform\node_modules\next\dist\build\webpack\plugins\wellknown-errors-plugin\index.js:27:21)
[     335ms] [LOG] [HMR] connected @ webpack-internal:///../../node_modules/next/dist/client/dev/error-overlay/websocket.js:45
[     339ms] [ERROR] ./src/app/globals.css:3:1
Syntax error: D:\CV\apps\wedding-invitation-platform\apps\web\src\app\globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive.

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities; @ webpack-internal:///../../node_modules/next/dist/compiled/@next/react-dev-overlay/dist/client.js:25
[     340ms] [ERROR] ./src/app/globals.css
Syntax error: D:\CV\apps\wedding-invitation-platform\apps\web\src\app\globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive. (3:1)

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;
-- inner error --
Syntax error: D:\CV\apps\wedding-invitation-platform\apps\web\src\app\globals.css The `border-border` class does not exist. If `border-border` is a custom class, make sure it is defined within a `@layer` directive. (3:1)

  1 | @import "tw-animate-css";
  2 | @import "shadcn/tailwind.css";
> 3 | @tailwind base;
    | ^
  4 | @tailwind components;
  5 | @tailwind utilities;
Generated code for D:\CV\apps\wedding-invitation-platform\node_modules\next\dist\build\webpack\loaders\css-loader\src\index.js??ruleSet[1].rules[11].oneOf[12].use[2]!D:\CV\apps\wedding-invitation-platform\node_modules\next\dist\build\webpack\loaders\postcss-loader\src\index.js??ruleSet[1].rules[11].oneOf[12].use[3]!D:\CV\apps\wedding-invitation-platform\apps\web\src\app\globals.css @ webpack-internal:///../../node_modules/next/dist/compiled/@next/react-dev-overlay/dist/client.js:25
[  111967ms] [LOG] [Fast Refresh] rebuilding @ webpack-internal:///../../node_modules/next/dist/client/dev/error-overlay/hot-dev-client.js:198
[  112994ms] [LOG] [Fast Refresh] rebuilding @ webpack-internal:///../../node_modules/next/dist/client/dev/error-overlay/hot-dev-client.js:198
[  114434ms] [ERROR] Failed to load resource: the server responded with a status of 404 (Not Found) @ http://localhost:3000/_next/static/webpack/adcdcf0e20bff1a3.webpack.hot-update.json:0
[  114435ms] [WARNING] [Fast Refresh] performing full reload because your application had an unrecoverable error @ webpack-internal:///../../node_modules/next/dist/client/dev/error-overlay/hot-dev-client.js:299
[  114981ms] [INFO] %cDownload the React DevTools for a better development experience: https://reactjs.org/link/react-devtools font-weight:bold @ webpack-internal:///(app-pages-browser)/../../node_modules/next/dist/compiled/react-dom/cjs/react-dom.development.js:32365
[  123397ms] [LOG] [Fast Refresh] rebuilding @ webpack-internal:///(app-pages-browser)/../../node_modules/next/dist/client/components/react-dev-overlay/hot-reloader-client.js:180
